implement gateway security + fix bug auth service